[package]
name = "mbar-rs"
version = "0.1.0"
authors = ["Josh Mitchell <yoshanuikabundi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mbar-rs"
path = "src/main.rs"

[dependencies]
# fstrings = "0.2"
derive_builder = "0.9.0"
pyo3 = "0.12.3"
numpy = "0.12.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

