[package]
name = "mbar-rs"
version = "0.3.0"
authors = ["Josh Mitchell <yoshanuikabundi@gmail.com>"]
edition = "2018"
description = "Rust bindings for pymbar"
readme = "README.md"
repository = "https://github.com/Yoshanuikabundi/mbar-rs"
keywords = ["python", "mbar", "molecular-dynamics", "stat-mech"]
categories = ["api-bindings", "mathematics", "science"]
license = "MIT"
exclude = [
    "mbar-rs.sublime-project",
    "mbar-rs.sublime-workspace"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "pmf"

[dependencies]
# fstrings = "0.2"
derive_builder = "0.9.0"
pyo3 = "0.12.3"
numpy = "0.12.1"
ndarray = "0.13.1"
thiserror = "1.0.21"

[dev-dependencies]
anyhow = "1.0"
itertools = "0.9"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

